<resources>
    <string name="app_name">Waste_Master-Two</string>
    <string name="btact_id1">Create Bin</string>
    <string name="btact_id2">Create Driver</string>
    <string name="btact_id3">User Details</string>
    <string name="btact_id4">Work Reports</string>
    <string name="profilemanagement">Route Management</string>
    <string name="etUserNamePM">Route Name</string>
    <string name="etDobPM">Route Number</string>
    <string name="etPasswordPM">Bin Code</string>
    <string name="textView4">Garbage Bin Type</string>
    <string name="radioButton">Public Bin</string>
    <string name="radioButton2">Home Bin</string>
    <string name="btnAdd">Add</string>
    <string name="btnUpdateProfile">Update</string>
    <string name="textView2">Edit Route</string>
    <string name="etUserNameEP">Route Name</string>
    <string name="btnSearch">Search</string>
    <string name="etDobEP">Route Number</string>
    <string name="etPasswordEP">Bin Code</string>
    <string name="textView3">Garbage Bin Type</string>
    <string name="radioButton3">Public Bin</string>
    <string name="radioButton4">Home Bin</string>
    <string name="btnEditEP">Edit</string>
    <string name="btnDeleteEP">Delete</string>
    <string name="bin_id">Waste Master</string>
    <string name="bt_id1">User Management</string>
    <string name="route_M">Route Management</string>
    <string name="Manage_Ga">Manage Garbage</string>
    <string name="tx_name">City</string>
    <string name="bin_idcreate">Create Bin</string>
    <string name="tx2_name">Lord Type</string>
    <string name="tx3_name">Cleaning Period</string>
    <string name="location">Location</string>
    <string name="createbin">Create Bin</string>
    <string name="btn_select">Open Googal Map</string>
    <string name="editBin">Edit Bin</string>
    <string name="editBinText">City</string>
    <string name="editBinlord">Lord Type</string>
    <string name="editbinClening">Cleaning Period</string>
    <string name="editBinlocation">Location</string>
    <string name="editBinbutton">Edit Bin</string>
    <string name="deleteBin">Delete Bin</string>
    <string name="editBin1">Edit Bin</string>
    <string name="deletebin1">Delete Bin</string>
    <string name="search">Search City</string>
    <string name="managegarbage">Manage Garbage</string>
    <string name="chk1">Food /Bio Waste.</string>
    <string name="chk2">Plastic / Polythene.</string>
    <string name="chk3">Glass / Non-recyclable waste.</string>
    <string name="btn1">Count Bin</string>
    <string name="btn2">Total Bin</string>
    <string name="totalbincount">Total Bin Count</string>
    <string name="t1">Category</string>
    <string name="t2">No Of Bin</string>
    <string name="btnsubmitnew">"Create New Bin "</string>
    <string name="btnsubmitnew1">Create New Bin</string>
    <string name="btact_id25">Assigned Driver.</string>
    <string name="textView">Route Report</string>
    <string name="spinner">Location</string>
    <string name="edittextRoute">Route Name</string>
    <string name="edittextroute2">Route Number</string>
    <string name="edittextlocation">Bin Count</string>
    <string name="report">Save and Print</string>
    <string name="routereport">Route Report</string>
    <string name="buttonPrint">Print</string>
    <string name="editTextQty">Bin Count</string>
    <string name="textViewview">"Report Genarate "</string>
    <string name="editTextName">Route Name</string>
    <string name="editTextPhone">Route Number</string>
</resources>