<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ManageGarbage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="377dp"
        android:layout_height="444dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginEnd="65dp"
            android:gravity="center"
            android:hint="@string/managegarbage"
            android:text="@string/managegarbage"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/chk1"
            android:layout_width="254dp"
            android:layout_height="51dp"
            android:layout_marginTop="25dp"
            android:hint="@string/chk1"
            android:minHeight="48dp"
            android:text="@string/chk1"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_on_secondary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <CheckBox
            android:id="@+id/chk2"
            android:layout_width="254dp"
            android:layout_height="51dp"
            android:hint="@string/chk2"
            android:minHeight="48dp"
            android:text="@string/chk2"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_on_secondary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chk1" />

        <CheckBox
            android:id="@+id/chk3"
            android:layout_width="254dp"
            android:layout_height="51dp"
            android:minHeight="48dp"
            android:text="@string/chk3"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_on_secondary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chk2" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="127dp"
            android:layout_height="48dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="56dp"
            android:backgroundTint="#1ee605"
            android:hint="@string/btn2"
            android:text="@string/btn2"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFCFC"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chk3"
            app:layout_constraintVertical_bias="0.947" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="127dp"
            android:layout_height="48dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="54dp"
            android:backgroundTint="#1ee605"
            android:hint="@string/btn1"
            android:text="@string/btn1"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFCFC"
            app:layout_constraintEnd_toStartOf="@+id/btn2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chk3" />

        <Button
            android:id="@+id/btnsubmitnew1"
            android:layout_width="312dp"
            android:layout_height="48dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="92dp"
            android:backgroundTint="#1ee605"
            android:hint="@string/btnsubmitnew1"
            android:text="@string/btnsubmitnew1"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFCFC"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chk3" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginEnd="29dp"
            android:layout_marginBottom="44dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/totalbincount"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:hint="@string/totalbincount"
                android:text="@string/totalbincount"
                android:textColor="@color/design_default_color_on_secondary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtsub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:background="@color/design_default_color_on_secondary"
                android:ems="10"
                android:enabled="false"
                android:textColor="#fff"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="380dp"
            android:layout_height="224dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/home2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout

            android:id="@+id/tb1"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:stretchColumns="*">

            <TableRow
                android:id="@+id/tbrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/t1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/t1"
                    android:text="Location" />

                <TextView
                    android:id="@+id/t2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/t2"
                    android:text="@string/t2" />

                <TextView
                    android:id="@+id/t3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Qty" />

                <TextView
                    android:id="@+id/t4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Total" />


            </TableRow>

        </TableLayout>


    </LinearLayout>

</LinearLayout>